fix : dark mode issues

--- a/src/components/layouts/Hero/Hero.css
+++ b/src/components/layouts/Hero/Hero.css
@@ -119,7 +119,6 @@
 }
 
 .text-with-border {
-    color: transparent;
     -webkit-text-stroke: 1px #000;
 }
 
